--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
         Hello World!
     </p>
     <p>
-        Outra linha
+        Teste Git
     </p>
+    <button>Botão</button>
 
 </body>
 </html>
